syntax = "proto3";

package patient.events;

// tells maven to generate individual files fir each different class
option java_multiple_files = true;

message PatientEvent {
  string patientId = 1;
  string name = 2;
  string email = 3;
  string event_type = 4;
}